@thyms fixed footer alignment problem for pages with fairly less content.

--- a/app/assets/stylesheets/app/admin.styl
+++ b/app/assets/stylesheets/app/admin.styl
@@ -19,8 +19,3 @@
 
 .welcome-picture
   width 600px
-
-footer
-  position absolute
-  bottom 0px
-  width 100%
