--- a/app/assets/stylesheets/app/application.styl
+++ b/app/assets/stylesheets/app/application.styl
@@ -239,3 +239,6 @@ $screen-lg-min = 1200px
 footer
   background #2d333b
   color #fff
+
+.main-container
+  min-height 600px
